# Luwiz

./: LICENSE  README.md  ecoBlacklist.txt  main.py  pyproject.toml  requirements.txt  users.json
cogs/: Owner.py  _eco.py  _profanity.py  _test.py  commands.py  games.py  listens.py  log.py  moderation.py  other.py  premium.py  thehelp.py
modules/: __bank_funcs__.py  __classes__.py  keep_alive.py
