[tool.poetry]
name = "repl_python3_ScooperRooper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^1.1.0"
discord = "^1.0.1"
wavelink = "^0.9.9"
tinydb = "^4.4.0"
Flask = "^2.0.1"
replit = "^3.1.0"
oauth2client = "^4.1.3"
gspread = "^3.7.0"
pymongo = "^3.11.4"
dnspython3 = "^1.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
